fix panel on mobile part 2

--- a/src/panel/index.styl
+++ b/src/panel/index.styl
@@ -12,7 +12,7 @@
       box-shadow 0px 0px 28px 0 rgba(0,0,0,0.05)
       z-index 100
       transition transform 0.3s ease-in-out
-      @media (max-width: 736px)
+      @media (max-width: 500px)
         width 100%
 
     &.tonic--left
